# pyjolt

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  pyproject.toml  requirements.txt
cmake/: Jolt.cmake
python/: __init__.py
python/math/: __init__.py
src/: Common.h  ConfigurationString.cpp  RegisterTypes.cpp  main.cpp
src/AABBTree/: AABBTreeBuilder.cpp  AABBTreeToBuffer.cpp
src/AABBTree/NodeCodec/: NodeCodecQuadTreeHalfFloat.cpp
src/AABBTree/TriangleCodec/: TriangleCodecIndexed8BitPackSOA4Flags.cpp
src/BindingUtility/: ArrayWrapper.cpp  Frustum.cpp  Perlin.cpp  Stream.h  Tuple.h
src/Core/: ARMNeon.cpp  Array.cpp  Atomics.cpp  ByteBuffer.cpp  Color.cpp  Core.cpp  FPControlWord.cpp  FPException.cpp  FPFlushDenormals.cpp  Factory.cpp  FixedSizeFreeList.cpp  HashCombine.cpp  InsertionSort.cpp  IssueReporting.cpp  JobSystem.cpp  JobSystemSingleThreaded.cpp  JobSystemThreadPool.cpp  JobSystemWithBarrier.cpp  LinearCurve.cpp  LockFreeHashMap.cpp  Memory.cpp  Mutex.cpp  MutexArray.cpp  NonCopyable.cpp  Profiler.cpp  QuickSort.cpp  RTTI.cpp  Reference.cpp  Result.cpp  STLAlignedAllocator.cpp  STLAllocator.cpp  STLTempAllocator.cpp  ScopeExit.cpp  Semaphore.cpp  StaticArray.cpp  StreamIn.cpp  StreamOut.cpp  StreamUtils.cpp  StreamWrapper.cpp  StridedPtr.cpp  (+5 more)
src/Geometry/: AABox.cpp  AABox4.cpp  ClipPoly.cpp  ClosestPoint.cpp  ConvexHullBuilder.cpp  ConvexHullBuilder2D.cpp  ConvexSupport.cpp  EPAConvexHullBuilder.cpp  EPAPenetrationDepth.cpp  Ellipse.cpp  GJKClosestPoint.cpp  IndexedTriangle.cpp  Indexify.cpp  MortonCode.cpp  OrientedBox.cpp  Plane.cpp  RayAABox.cpp  RayCapsule.cpp  RayCylinder.cpp  RaySphere.cpp  RayTriangle.cpp  Sphere.cpp  Triangle.cpp
src/Math/: DMat44.cpp  DVec3.cpp  Double3.cpp  DynMatrix.cpp  EigenValueSymmetric.cpp  FindRoot.cpp  Float2.cpp  Float3.cpp  Float4.cpp  GaussianElimination.cpp  HalfFloat.cpp  Mat44.cpp  Math.cpp  MathTypes.cpp  Matrix.cpp  Quat.cpp  Real.cpp  Swizzle.cpp  Trigonometry.cpp  UVec4.cpp  Vec3.cpp  Vec4.cpp  Vector.cpp
src/ObjectStream/: GetPrimitiveTypeOfType.cpp  ObjectStream.cpp  ObjectStreamBinaryIn.cpp  ObjectStreamBinaryOut.cpp  ObjectStreamIn.cpp  ObjectStreamOut.cpp  ObjectStreamTextIn.cpp  ObjectStreamTextOut.cpp  ObjectStreamTypes.cpp  SerializableAttribute.cpp  SerializableAttributeEnum.cpp  SerializableAttributeTyped.cpp  SerializableObject.cpp  TypeDeclarations.cpp
src/Physics/: DeterminismLog.cpp  EActivation.cpp  EPhysicsUpdateError.cpp  IslandBuilder.cpp  LargeIslandSplitter.cpp  PhysicsLock.cpp  PhysicsScene.cpp  PhysicsSettings.cpp  PhysicsStepListener.cpp  PhysicsSystem.cpp  PhysicsUpdateContext.cpp  StateRecorder.cpp  StateRecorderImpl.cpp
src/Physics/Body/: AllowedDOFs.cpp  Body.cpp  BodyAccess.cpp  BodyActivationListener.cpp  BodyCreationSettings.cpp  BodyFilter.cpp  BodyID.cpp  BodyInterface.cpp  BodyLock.cpp  BodyLockInterface.cpp  BodyLockMulti.cpp  BodyManager.cpp  BodyPair.cpp  BodyType.cpp  MassProperties.cpp  MotionProperties.cpp  MotionQuality.cpp  MotionType.cpp
src/Physics/Character/: Character.cpp  CharacterBase.cpp  CharacterVirtual.cpp
src/Physics/Collision/: AABoxCast.cpp  ActiveEdgeMode.cpp  ActiveEdges.cpp  BackFaceMode.cpp  CastConvexVsTriangles.cpp  CastResult.cpp  CastSphereVsTriangles.cpp  CollectFacesMode.cpp  CollideConvexVsTriangles.cpp  CollidePointResult.cpp  CollideShape.cpp  CollideSoftBodyVertexIterator.cpp  CollideSoftBodyVerticesVsTriangles.cpp  CollideSphereVsTriangles.cpp  CollisionCollector.cpp  CollisionCollectorImpl.cpp  CollisionDispatch.cpp  CollisionGroup.cpp  ContactListener.cpp  EstimateCollisionResponse.cpp  GroupFilter.cpp  GroupFilterTable.cpp  InternalEdgeRemovingCollector.cpp  ManifoldBetweenTwoFaces.cpp  NarrowPhaseQuery.cpp  NarrowPhaseStats.cpp  ObjectLayer.cpp  ObjectLayerPairFilterMask.cpp  ObjectLayerPairFilterTable.cpp  PhysicsMaterial.cpp  PhysicsMaterialSimple.cpp  RayCast.cpp  ShapeCast.cpp  ShapeFilter.cpp  SortReverseAndStore.cpp  TransformedShape.cpp
src/Physics/Collision/BroadPhase/: BroadPhase.cpp  BroadPhaseBruteForce.cpp  BroadPhaseLayer.cpp  BroadPhaseLayerInterfaceMask.cpp  BroadPhaseLayerInterfaceTable.cpp  BroadPhaseQuadTree.cpp  BroadPhaseQuery.cpp  QuadTree.cpp  (+2 more)
src/Physics/Constraints/: CalculateSolverSteps.cpp  ConeConstraint.cpp  Constraint.cpp  ConstraintManager.cpp  ContactConstraintManager.cpp  DistanceConstraint.cpp  FixedConstraint.cpp  GearConstraint.cpp  HingeConstraint.cpp  MotorSettings.cpp  PathConstraint.cpp  PathConstraintPath.cpp  PathConstraintPathHermite.cpp  PointConstraint.cpp  PulleyConstraint.cpp  RackAndPinionConstraint.cpp  SixDOFConstraint.cpp  SliderConstraint.cpp  SpringSettings.cpp  SwingTwistConstraint.cpp  TwoBodyConstraint.cpp
src/Physics/Ragdoll/: Ragdoll.cpp
src/Physics/SoftBody/: SoftBodyContactListener.cpp  SoftBodyCreationSettings.cpp  SoftBodyManifold.cpp  SoftBodyMotionProperties.cpp  SoftBodyShape.cpp  SoftBodySharedSettings.cpp  SoftBodyUpdateContext.cpp  SoftBodyVertex.cpp
src/Physics/Vehicle/: MotorcycleController.cpp  TrackedVehicleController.cpp  VehicleAntiRollBar.cpp  VehicleCollisionTester.cpp  VehicleConstraint.cpp  VehicleController.cpp  VehicleDifferential.cpp  VehicleEngine.cpp  VehicleTrack.cpp  VehicleTransmission.cpp  Wheel.cpp  WheeledVehicleController.cpp
src/Renderer/: DebugRenderer.cpp  DebugRendererPlayback.cpp  DebugRendererRecorder.cpp  DebugRendererSimple.cpp
src/Skeleton/: SkeletalAnimation.cpp  Skeleton.cpp  SkeletonMapper.cpp  SkeletonPose.cpp
src/TriangleGrouper/: TriangleGrouper.cpp  TriangleGrouperClosestCentroid.cpp  TriangleGrouperMorton.cpp
src/TriangleSplitter/: TriangleSplitter.cpp  TriangleSplitterBinning.cpp  TriangleSplitterFixedLeafSize.cpp  TriangleSplitterLongestAxis.cpp  TriangleSplitterMean.cpp  TriangleSplitterMorton.cpp
tests/assets/shaders/: lines.frag  lines.vert  main.frag  main.vert  shadow_map.vert
tests/samples/: camera.py  imgui.ini  layers.py  main.py  physics.py  pygameBackend.py  settings.py  shaders_utility.py  ui.py
tests/samples/tests/: test_common.py
(+73 files in other folders)
